[package]
name = "cryptojsonapi"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
dotenv = "0.15.0"
lazy_static = "1.5.0"
once_cell = "1.10.0"
reqwest = { version = "0.11", features= ["json"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.9.3"
actix-session = { version = "0.10.1", features = ["redis-session"] }
